security improvements
